--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ build-backend = "poetry.masonry.api"
 
 [tool.poetry]
 name = "tyrannosaurus"
-version = "0.10.4"
+version = "0.10.5"
 description = "Generate beautifully modern Python projects with seamless, GitHub-based CI/CD and loads of integrations."
 authors = ["Douglas Myers-Turnbull"]
 maintainers = ["Douglas Myers-Turnbull"]
@@ -33,10 +33,10 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
-	"Intended Audience :: Developers",
+	  "Intended Audience :: Developers",
     "Operating System :: OS Independent",
     "Environment :: Console",
-	"Framework :: tox",
+	  "Framework :: tox",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Software Development :: Build Tools",
     "Topic :: Software Development :: Code Generators"
@@ -127,11 +127,10 @@ environment  = false
 tyrannosaurus = "tyrannosaurus.cli:cli"
 
 [tool.poetry.dependencies]
-python                   = ">=3.8, <4"
+python                   = "^3.8"
 tomlkit                  = ">=0.7, <1"
 typer                    = ">=0.4, <1"
-click                    = ">8.0"  # let typer handle the rest
-requests                 = ">=2.24, <3"
+requests                 = "^2.26"
 grayskull                = ">=0.8.5, <1"
 
 [tool.poetry.dev-dependencies]
@@ -139,13 +138,13 @@ bandit                   = "^1.7"
 coverage                 = {extras = ["toml"], version = "^6"}
 flake8                   = "^3.9"
 flake8-bugbear           = ">=21"
-flake8-docstrings        = "^1.5"
+flake8-docstrings        = "^1.6"
 pre-commit               = "^2.15"
 pre-commit-hooks         = "^4.0"
 pytest                   = "^6.2"
 pytest-cov               = "^3"
-sphinx                   = "^4.0"
-sphinx-autoapi           = "^1.5"
+sphinx                   = "^4.2"
+sphinx-autoapi           = "^1.8"
 sphinx-copybutton        = "^0.4"
 sphinx-rtd-theme         = "^1.0"
 tomlkit                  = "^0.7"
