--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,10 +135,11 @@ grayskull                = ">=0.8.5, <1"
 
 [tool.poetry.dev-dependencies]
 bandit                   = "^1.7"
-coverage                 = {extras = ["toml"], version = "^6"}
-flake8                   = "^3.9"
-flake8-bugbear           = ">=21"
+flake8                   = "^4"
+flake8-bugbear           = ">=21.9.2"
 flake8-docstrings        = "^1.6"
+coverage                 = {extras = ["toml"], version = "^6"}
+nbqa                     = "^1.1"
 pre-commit               = "^2.15"
 pre-commit-hooks         = "^4.0"
 pytest                   = "^6.2"
