--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        os: [ubuntu-20.04]
-        python-version: ["3.9"]
+        os: ["ubuntu-20.04", "windows-2022", "macos-11"]
+        python-version: ["3.10"]
     runs-on: "${{ matrix.os }}"
     steps:
       - name: Checkout
