--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -26,6 +26,7 @@ commands =
     poetry run pre-commit run check-toml
     poetry run pre-commit run check-yaml
     poetry run pre-commit run check-json
+    poetry run xdoctest $${pkg}
     poetry run pytest --cov-report term-missing --cov=$${pkg} tests/
     poetry run bandit -r $${pkg}
     poetry run bandit -r tests --skip B101
