--- a/tests/resources/fake/pyproject.toml
+++ b/tests/resources/fake/pyproject.toml
@@ -12,7 +12,7 @@ build-backend = "poetry.masonry.api"
 
 [tool.poetry]
 name = "grayskull"
-version = "0.8.1"
+version = "0.1.0"
 description = "A mock project."
 authors = ["Fake Person"]
 maintainers = ["Fake Person"]
@@ -82,29 +82,28 @@ changelog    = false
 #########################################################################################
 
 [tool.poetry.dependencies]
-python                   = ">=3.7, <4"
-tomlkit                  = "^0.6.0"
-importlib-metadata       = "^1.6"
-typer                    = "^0.2"
+python                   = ">=3.8, <4"
+tomlkit                  = "^0.11"
+typer                    = "^0.6"
 requests                 = "^2.23"
-grayskull                = "^0.4"
+grayskull                = "^1.4"
 
 [tool.poetry.dev-dependencies]
-pre-commit               = "^2.3"
-pytest                   = "^5.4"
-coverage                 = {extras = ["toml"], version = "^5.1"}
-pytest-cov               = "^2.8"
-sphinx                   = "^3.0"
-sphinx-autoapi           = "^1.3"
-sphinx-rtd-theme         = "^0.4.3"
-mypy                     = "^0.750"
-flake8                   = "^3.7"
-flake8-docstrings        = "^1.5"
-black                    = "=19.10b0"
+pre-commit               = "^2.20"
+pytest                   = "^7"
+coverage                 = {extras = ["toml"], version = "^6"}
+pytest-cov               = "^3"
+sphinx                   = "^5"
+sphinx-autoapi           = "^1.8"
+sphinx-rtd-theme         = "^1"
+mypy                     = "^0.900"
+flake8                   = "^4"
+flake8-docstrings        = "^1.6"
+black                    = "=22.6.0"
 sphinx-autodoc-typehints = "^1.10"
-xdoctest                 = "^0.12"
-hypothesis               = "^5.10"
-flake8-bugbear           = "^20.1"
+xdoctest                 = "^1"
+hypothesis               = "^6"
+flake8-bugbear           = ">=22"
 
 
 [tool.poetry.extras]
