doc: fix issues

--- a/.github/workflows/pull-test.yml
+++ b/.github/workflows/pull-test.yml
@@ -22,7 +22,7 @@ jobs:
           python-version: "${{ matrix.python-version }}"
       - name: Install build meta-dependencies
         run: |
-          pip install tox poetry
+          pip install tox poetry 'wheel>=0.36,<1.0'
       - name: Test with tox
         run: |
           tox -v
