--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: "${{ matrix.python-version }}"
       - name: Install build meta-dependencies
         run: |
-          pip install poetry tox
+          pip install poetry tox 'wheel>=0.36,<1.0'
       - name: Test with tox
         run: |
           tox -v
