--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -29,13 +29,13 @@ commands =
     poetry run xdoctest $${pkg}
     poetry run pytest --cov-report term-missing --cov=$${pkg} tests/
     poetry run bandit -r $${pkg}
-    poetry run bandit -r tests --skip B101
+    poetry run bandit -r tests --skip B008,B101
     - poetry run flake8 $${pkg}
     - poetry run flake8 docs
     - poetry run mypy $${pkg}
     - poetry run mypy docs
     - poetry run mypy tests
-    - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
+    - poetry run flake8 --ignore=B008,D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
     poetry run sphinx-build -b html docs docs/html
 
 
