--- a/tox.ini
+++ b/tox.ini
@@ -18,10 +18,10 @@ commands =
     poetry run pre-commit run check-json
     poetry run pytest --cov-report term-missing --cov=tyrannosaurus tests/
     poetry run bandit -r tyrannosaurus
-    poetry run bandit -r tests --skip B008,B101
+    poetry run bandit -r tests --skip B101
     - poetry run flake8 tyrannosaurus
     - poetry run flake8 docs
-    - poetry run flake8 --ignore=B008,D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
+    - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
     poetry run sphinx-build -b html docs docs/html
 
 
