--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: gaurav-nelson/github-action-markdown-link-check@v1
-  analyse:
+  analyze:
     name: Analyze with CodeQL
     runs-on: ubuntu-latest
     steps:
