--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,21 +7,36 @@ on:
   repository_dispatch:
     types: [release-made]
 jobs:
-  deploy:
-    runs-on: ubuntu-20.04
+  test:
+    name: Test on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: ["ubuntu-22.04", "windows-2022", "macos-12"]
+        python: ["3.10"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: "${{ matrix.python }}"
       - name: Install build meta-dependencies
         run: |
           pip install poetry tox
       - name: Test with tox
         run: |
           tox -v
+  deploy:
+    runs-on: ubuntu-20.04
+    needs: ["test"]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
       - name: Build sdists and wheels with Poetry
         run: |
           poetry build
@@ -29,10 +44,16 @@ jobs:
       - name: Build the Docker image
         run: |
           docker build .
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Attach artifacts to the GitHub release
         uses: skx/github-action-publish-binaries@master
         with:
-          args: "dist/*"
+          args: dist/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish to PyPi
