--- a/.github/workflows/pull-test.yml
+++ b/.github/workflows/pull-test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        os: [ubuntu-20.04]
+        os: ["ubuntu-22.04"]
         python-version: ["3.10"]
     runs-on: "${{ matrix.os }}"
     steps:
