--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,14 +4,14 @@
 name: check
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, "release/**", "releases/**"]
   pull_request:
   schedule:
     - cron: 0 7 * * 6
 jobs:
   markdown-link-check:
     name: Check Markdown links
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - uses: gaurav-nelson/github-action-markdown-link-check@v1
