--- a/.github/workflows/pull-test.yml
+++ b/.github/workflows/pull-test.yml
@@ -3,26 +3,28 @@
 name: pulltest
 on:
   pull_request:
-    branches: [main, master]
+    types: [ready_for_review, opened, reopened]
+    branches: [main, master, stable, "release/**", "releases/**"]
     paths-ignore: ["**/*.md", "**/*.rst"]
 jobs:
-  build:
+  test:
+    name: "Test ${{ github.ref_type }}:${{ github.ref_name }} on ${{ matrix.os }}/py${{ matrix.python-version }}"
     strategy:
       max-parallel: 1
       matrix:
-        os: ["ubuntu-22.04"]
+        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         python-version: ["3.10"]
     runs-on: "${{ matrix.os }}"
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: "Set up Python ${{ matrix.python-version }}"
-        uses: actions/setup-python@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
           python-version: "${{ matrix.python-version }}"
       - name: Install build meta-dependencies
         run: |
-          pip install tox poetry 'wheel>=0.36,<1.0'
+          pip install 'poetry>=1.1,<2' 'tox>=3,<4' 'wheel>=0.37,<1.0'
       - name: Test with tox
         run: |
           tox -v
