--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -5,12 +5,15 @@ on:
   push:
     branches: [main, master]
 jobs:
-  build:
+  test:
     strategy:
       matrix:
-        os: ["ubuntu-22.04", "windows-2022", "macos-12"]
+        # the order matters: macOS is assumed to be the last,
+        # so coverage is only updated for that one on Python 3.10
+        # see below
+        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         python-version: ["3.10"]
-    name: "Test on ${{ matrix.os }} and ${{ matrix.python-version }}"
+    name: "test on ${{ matrix.os }}/py${{ matrix.python-version }}"
     runs-on: "${{ matrix.os }}"
     steps:
       - name: Checkout
@@ -18,23 +21,26 @@ jobs:
       - name: "Set up Python ${{ matrix.python-version }}"
         uses: actions/setup-python@v4
         with:
-          python-version: "${{ matrix.python }}"
+          python-version: "${{ matrix.python-version }}"
       - name: Install build meta-dependencies
         run: |
-          pip install poetry tox 'wheel>=0.36,<1.0'
+          pip install 'poetry>=1.1,<2' 'tox>=3,<4' 'wheel>=0.37,<1.0'
       - name: Test with tox
         run: |
           tox -v
-      - name: Build the Docker image
+      - name: Test Docker build
+        if: ${{ ( runner.os == 'Linux' || runner.os == 'Windows' ) && matrix.python-version == '3.10' }}
         run: |
           docker build .
       - name: Update coveralls
+        if: runner.os == 'macOS'
         run: |
           pip install 'coveralls>=3,<4'
           coveralls --service=github || true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Update codecov
+        if: runner.os == 'macOS'
         run: |
           pip install 'codecov>=2.1,<3.0'
           codecov || true
