--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,15 +44,29 @@ jobs:
         run: |
           poetry build
           poetry install
-      - name: Build the Docker image
-        run: |
-          docker build .
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ GITHUB_REPOSITORY
+      - name: Push the Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
       - name: Attach artifacts to the GitHub release
         uses: skx/github-action-publish-binaries@master
         with:
