--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -37,7 +37,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Update codecov
-        if: runner.os == 'macOS'
+        if: runner.os == 'Linux'
         run: |
           pip install 'codecov>=2.1,<3.0'
           codecov || true
