--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,6 +40,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+      - name: Install build meta-dependencies
+        run: |
+          pip install 'poetry>=1.1,<2' 'tox>=3,<4' 'wheel>=0.37,<1.0'
       - name: Build sdists and wheels with Poetry
         run: |
           poetry build
