--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -6,7 +6,7 @@ isolated_build = True
 # in the commands list
 # extras = dev
 # which Python version to use
-envlist = py39
+envlist = python3.10
 
 [testenv]
 # We must whitelist tools that are called before installing the package
