--- a/.editorconfig
+++ b/.editorconfig
@@ -3,36 +3,39 @@
 # The most majority indentation style was selected for each language
 root = true
 
+# In 2022, most languages are 2-space
+# We assume TypeScript to be 2-space because JavaScript and JSX so strongly are,
+# and we'd rather keep those two consistent.
 [*]
 end_of_line = lf
 charset = utf-8
-
-# 4-space
-[*.{py,c,cpp,inc,h,s,asm,m,mm,ps1,bat,cs,d,erl,fsx,java,groovy,gradle,julia,php,rs,swift,ts,kt,kts,pl,perl,f90,f95,f03,f08,f15,f18}]
-# excludes Fortran fixed-form (e.g. .f/.ftn); these have weird indentation rules
 indent_style = space
+indent_size = 2
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+# 4-space, traditionally compiled without bytecode or JIT --
+#   Julia, Rust, D, C++, Objective-C, C, Fortran, and Assembly
+# We exclude Fortran fixed-form (e.g. .f/.ftn); these have weird indentation rules
+# C++ is even between 4-space and 2-space, while C is even between 4-space and tab
+[*.{julia,rs,d,cpp,c,m,mm,f[0-9][0-9],inc,h,s,asm}]
 indent_size = 4
-trim_trailing_whitespace = true
-insert_final_newline = true
 
-# 2-space
-[{Dockerfile,Vagrantfile,*.scala,*.sbt,*.coffee,*.dart,*.js,*.sh,*.sql,*.hs,*.lhs,*.purs,*.ml,*.sml,*.R,*.rb,*.pas,*.dfm,*.clj,*.lisp,*.ex,*.exs,*.yml,*.yaml,*.json,*.jsonnet,*.xml,*.xaml,*.vim,*.vimrc,*.css,*.tex,*.html,*.htm,*.yy,*.asciidoc,*.pod,*.ini,*.toml}]
-indent_style = space
-indent_size = 2
-trim_trailing_whitespace = true
-insert_final_newline = true
+# 4-space, generally VM --
+#   Erlang, F#, Python, PHP (in 8+), Java, Kotlin, Groovy (+Gradle), F#, erlang, Swift
+[*.{py,php,java,groovy,gradle,kt,kts,cs,fs,fsx,fsi,erl,swift}]
+indent_size = 4
 
-# tab
-[{Makefile,*.mk,*.go,*.hx,*.lua,*.sas,*.ahk,*.vala,*.sdc}]
+# 4-space, generally interpreted --
+#   Lua, Vala, Perl, PowerShell, Batch
+# Lua and Vala are about even between 4-space and tab
+[*.{lua,vala,pl,perl,ps1,bat}]
+indent_size = 4
+
+# tab-based --
+#   Go, Haxe, Verilog, System Verilog, SAS, and AutoIt
+[*.{go,hx,v,sv,sas,au3}]
 indent_style = tab
-insert_final_newline = true
-
-# markdown; 2-space
-[*.{md,mdown,markdown}]
-# Markdown uses two trailing spaces for a line break
-indent_style = space
-indent_size = 2
-trim_trailing_whitespace = false
 
 # CSV-like
 [*.{tsv,tab,csv}]
