--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,6 @@ repos:
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
       - id: trailing-whitespace
-        args: ["--markdown-linebreak-ext=md"]
       # This one is slow and doesn't check for much
       # - detect-private-key
       # This is very slow, so I recommend disabling it.
@@ -43,7 +42,7 @@ repos:
       - id: commitizen
         stages: ["commit-msg"]
     repo: https://github.com/commitizen-tools/commitizen
-    rev: v2.29.0
+    rev: v2.32.0
 
   # --- Strip output from .ipynb files ---
   # - hooks:
@@ -61,12 +60,12 @@ repos:
     rev: 5.10.1
     hooks:
       - id: isort
-        name: isort (python)
+        args: ["--profile", "black"]
   # make sure to run black *after* isort
   - hooks:
       - id: black
     repo: https://github.com/psf/black
-    rev: 22.6.0
+    rev: 22.8.0
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.12.1
     hooks:
@@ -77,8 +76,8 @@ repos:
     hooks:
       - id: nbqa-black
   - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.7.1
     hooks:
       - id: prettier
         stages: [commit]
         exclude: ^recipes/.*
-    rev: v2.7.1
