--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,8 @@ name: tyrannosaurus
 channels:
   - conda-forge
 dependencies:
-  - python>=3.8,<4
-  - tomlkit>=0.8,<1
+  - python>=3.9,<4
+  - tomlkit>=0.11,<1
   - typer>=0.6,<1
-  - requests>=2.26,<3
-  - grayskull>=1.4,<2.0
+  - httpx>=0.23,<1
+  - grayskull>=1.8,<2.0
