--- a/.github/workflows/on-pull-label.yaml
+++ b/.github/workflows/on-pull-label.yaml
@@ -1,13 +1,18 @@
+# SPDX-License-Identifier Apache-2.0
+# Source: https://github.com/dmyersturnbull/tyranno
+name: on-pull-label
+
 on:
   pull_request_target:
     types: [opened, edited]
     branches: [master]
-name: conventional-release-labels
+
 jobs:
   label:
     runs-on: ubuntu-latest
     steps:
-      - uses: bcoe/conventional-release-labels@v1
+      - name: Label pull request
+        uses: bcoe/conventional-release-labels@v1
         with:
           type_labels: |
             {
