--- a/.github/workflows/test-one.yaml
+++ b/.github/workflows/test-one.yaml
@@ -1,5 +1,7 @@
-# Reusable test
-name: test
+# SPDX-License-Identifier Apache-2.0
+# Source: https://github.com/dmyersturnbull/tyranno
+name: test-one
+
 on:
   workflow_call:
     inputs:
@@ -9,6 +11,7 @@ on:
       py-vr:
         required: true
         type: string
+
 jobs:
   test:
     name: "test on ${{ os }}/py${{ py-vr }}"
