--- a/.github/settings.yaml
+++ b/.github/settings.yaml
@@ -129,7 +129,7 @@ branches:
     protection:
       required_pull_request_reviews:
         required_approving_review_count: 1
-        dismiss_stale_reviews: true
+        dismiss_stale_reviews: false
         require_code_owner_reviews: false
       required_status_checks:
         strict: true
