--- a/.github/workflows/test-matrix.yaml
+++ b/.github/workflows/test-matrix.yaml
@@ -1,7 +1,10 @@
-# Reusable test
-name: test
+# SPDX-License-Identifier Apache-2.0
+# Source: https://github.com/dmyersturnbull/tyranno
+name: test-matrix
+
 on:
   workflow_call:
+
 jobs:
   test:
     strategy:
@@ -9,5 +12,5 @@ jobs:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         # :tyranno: python-version: ${.deps.python~.semver_minor(@)~}
         python-version: ["3.11"]
-    name: "test on ${{ matrix.os }}/py${{ matrix.python-version }}"
+    name: "Test on ${{ matrix.os }}/py${{ matrix.python-version }}"
     uses: ./.github/workflows/test-one.yaml
