feat: improve issues

--- a/.github/ISSUE_TEMPLATE/docs.yaml
+++ b/.github/ISSUE_TEMPLATE/docs.yaml
@@ -1,7 +1,7 @@
 name: "Documentation"
 title: "📚 Documentation"
 description: "Documentation issue"
-labels: ["kind: documentation"]
+labels: ["type: docs"]
 
 body:
   - type: textarea
