--- a/.github/settings.yaml
+++ b/.github/settings.yaml
@@ -32,21 +32,32 @@ repository:
   enable_vulnerability_alerts: true
 
 # Adapted from https://opensource.creativecommons.org/contributing-code/repo-labels/
+# https://seantrane.com/posts/logical-colorful-github-labels-18230/
+# and https://github.com/pvdlg/conventional-changelog-metahub
 labels:
+  - name: "reverts"
+    description: "❗ Reverts another commit"
+    color: "#000000"
+  - name: "reverted"
+    description: "❌ Was later reverted"
+    color: "#000000"
+  - name: "exclude"
+    description: "🔇 Exclude from release notes"
+    color: "#003010"
+  - name: "highlight"
+    description: "🔈 Highlight in release notes"
+    color: "#008060"
   - name: "breaking"
     description: "🔨 Breaking change"
     color: "#000000"
-  - name: "revert"
-    description: "🗑 Reversion"
-    color: "#000000"
-  - name: "highlight"
-    description: "✨ Highlight"
-    color: "#004026"
-  - name: "sticky note"
+  - name: "help"
+    description: "👋 Help needed"
+    color: "#009000"
+  - name: "bookmark"
     description: "🔖 Important for reference"
     color: "#ffee00"
   - name: "security"
-    description: "🔒 Security"
+    description: "🔒 Vulnerability"
     color: "#ffffff"
   - name: "type: test"
     description: "🚨 Adding missing tests or correcting existing tests"
@@ -60,11 +71,14 @@ labels:
   - name: "type: fix"
     description: "🐛 A bug fix"
     color: "#ffffff"
+  - name: "type: ci"
+    description: "⚙️ Continuous integration and deployment (CI/CD)"
+    color: "#ffffff"
   - name: "type: docs"
     description: "📚 Documentation only changes"
     color: "#ffffff"
   - name: "type: build"
-    description: "🛠 Changes that affect the build system or external dependencies"
+    description: "🔧 Changes that affect the build system or external dependencies"
     color: "#ffffff"
   - name: "type: question"
     description: "❓ Can be resolved with an answer"
@@ -84,9 +98,6 @@ labels:
   - name: "🟩 priority: low"
     description: "Low priority and doesn't need to be rushed"
     color: "#cfda2c"
-  - name: "⬜ priority: none"
-    description: "Too minor to fix"
-    color: "#ffffff"
   - name: "status: ready for dev"
     description: "🏁 Ready for work"
     color: "#cccccc"
@@ -96,33 +107,27 @@ labels:
   - name: "status: ticket work required"
     description: "🧹 Needs more details before it can be worked on"
     color: "#666666"
-  - name: "status: label work required"
-    description: "🔖 Needs proper labelling before it can be worked on"
-    color: "#666666"
   - name: "status: discarded"
     description: "⛔️ Will not be worked on"
-    color: "#eeeeee"
-  - name: "status: discontinued"
-    description: "🙅 Not suitable for work as repo is in maintenance"
     color: "#eeeeee"
   - name: "status: awaiting triage"
     description: "🚦 Has not been triaged & therefore, not ready for work"
     color: "#333333"
   - name: "effort: 1"
-    description: "1️⃣ trivial"
-    color: "#400040"
+    description: "1️⃣ Easy (t < 1 hr)"
+    color: "#300040"
   - name: "effort: 2"
-    description: "2️⃣ easy"
+    description: "2️⃣ Moderate (1 hr <= t < 4 hr)"
     color: "#600040"
   - name: "effort: 3"
-    description: "3️⃣ moderate"
-    color: "#800040"
+    description: "3️⃣ Hard (4 hr <= t < 8 hr)"
+    color: "#900040"
   - name: "effort: 4"
-    description: "4️⃣ hard"
+    description: "4️⃣ Severe (t >= 8 hours)"
     color: "#a00040"
-  - name: "effort: 5"
-    description: "5️⃣ severe"
-    color: "#c00040"
+  - name: "scope: plugin"
+    description: "🔌 Plugins"
+    color: "#0000aa"
 
 branches:
   - name: main
